.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:48:45 **** Incremental Build of configuration Debug for project 22_06_10_Userbutton ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:267:28: error: 'FLASH_USER_END_ADDR' undeclared (first use in this function); did you mean 'FLASH_USER_START_ADDR'?
  267 |    NbOfSectors = GetSector(FLASH_USER_END_ADDR) - FirstSector + 1;
      |                            ^~~~~~~~~~~~~~~~~~~
      |                            FLASH_USER_START_ADDR
../Core/Src/main.c:267:28: note: each undeclared identifier is reported only once for each function it appears in
At top level:
../Core/Src/main.c:993:17: warning: 'GetSectorSize' defined but not used [-Wunused-function]
  993 | static uint32_t GetSectorSize(uint32_t Sector) {
      |                 ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
01:51:32 **** Building Selected Files of configuration Debug for project 22_06_10_Userbutton ****
Info: Internal Builder is used for build
arm-none-eabi-gcc "..\\Core\\Src\\main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core\\Src\\main.o" 
